# brevity-server

brevity-server/: pyproject.toml
brevity-server/brevity_server/: request.py  request_builder.py  server.py  string_builder.py  user.py
brevity-server/tests/: test_brevity_server.py  test_string_builder.py
