[tool.poetry]
name = "brevity-server"
version = "0.1.0"
description = ""
authors = ["atd832 <michelle.gramolini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
